@@ -20,6 +20,7 @@
 #define VPOPMAIL_MYSQL_H
 
 #undef VALIAS
+#undef ENABLE_AUTH_LOGGING
 
 char *MYSQL_READ_SERVER;
 int MYSQL_READ_PORT;
